# filereader

./: package-lock.json  readCsvFile.js  readCsvFile.py  readJsonFile.js  readTextFile.js  readTxtFile.py  readXmlFile.js  readYamlFile.py  sample.csv  sample.json  sample.txt  sample.xml  sample.yaml
javascript/: package-lock.json  package.json  readYamlFile.js
javascript/endpoints/: fileReader.js
javascript/fileReaders/: readCsvFile.js  readJsonFile.js  readTextFile.js  readXmlFile.js  readYamlFile.js
python/: main.py  pyproject.toml  read_json_file.py  read_xml_file.py
python/endpoints/: file_reader.py
python/file_readers/: read_csv_file.py  read_json_file.py  read_txt_file.py  read_xml_file.py  read_yaml_file.py
